change sun.BASE64 to java.util.Base64